--- a/css/item_index.scss
+++ b/css/item_index.scss
@@ -22,6 +22,19 @@ article {
     & > aside {
         float: right;
         margin: 10px 15px 5px;
+
+        & > a > i.ion {
+            position: relative;
+            top: 1px;
+        }
+
+        & > a > i.ion-ios-play-outline {
+            left: 2px;
+        }
+
+        & > a > i.ion-ios-paperplane-outline {
+            top: 2px;
+        }
     }
 
     & > a {
