--- a/css/page.scss
+++ b/css/page.scss
@@ -30,9 +30,8 @@ body > nav:first-of-type {
 
     font-size: $navbar-font-size;
 
-    pointer-events: none;
-
     @include no-select;
+    pointer-events: none;
 
     & > a {
         margin-left: $navbar-spacing;
@@ -52,8 +51,9 @@ body > nav:first-of-type {
             -webkit-text-stroke: .5px;
         }
 
-        &:nth-of-type(2) > i {
-            font-size: 30px;
+        & > i:not(.ion-ios-person-outline) {
+            position: relative;
+            bottom: 1px;
         }
     }
 }
@@ -76,7 +76,7 @@ body > nav:first-of-type {
         & > i.ion {
             display: inline-block;
             vertical-align: middle;
-            margin-right: 5px;
+            margin-right: 7px;
         }
 
         & > span {
